--- a/indx.html
+++ b/indx.html
@@ -5,20 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AASHISH Times</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
+<div id="whole-body">
     <div id="heading">
     <header><i>AASHIHSH TIMES</i></header>
-    <button id="Categories">Categories</button>
+    <button id="Categories" >Categories</button>
     </div>
-    <div id="navbar">
+    <div class="see" id="navbar">
         <ul id="navlist">
-            <li>Sports</li>
-            <li>News</li>
-            <li>News2</li>
-            <li>News3</li>
+            <li id="sports">Sports</li>
+            <li id="science">Science</li>
+            <li id="business">Business</li>
+            <li id="politics">Politics</li>
         </ul>
+    </div> 
+
+    <main id="forgap">
+
+    </main>
+    
+        <div id="footernav" >
+            <button id="prevBtn">Prev</button>
+            <button id="nextBtn">Next</button>
+        </div>
+    
+</div>
+    <div id="modal" >
+
+    <div id="modal-header">
+    <div id="headingofmodal"></div>
+    <button id="close">&times;</button>
     </div>
+    <p id="modalp"></p>
+
+    </div>
+
     <script src="index.js"></script>
 </body>
 </html>
+
