Like button not working

--- a/index.html
+++ b/index.html
@@ -38,14 +38,9 @@
             <button class="btn prevBtn">&#x2190;</button>
             <button class="btn nextBtn">&#x2192;</button>
             <div id="heart">
-                <p id="like">Give us a like !</p> <i class="fa-solid fa-heart"></i>
+                <p id="like">Give us a like !</p>
             </div>
         </div>
-
-
-
-        <!-- hello -->
-
     </div>
     <div id="modal">
 
@@ -56,6 +51,8 @@
         </div>
         <p id="modalp"></p>
         <p>For more information please <a id="newsurl" href="" target="_blank">click</a> the button</p>
+
+
 
 
 
