--- a/index.html
+++ b/index.html
@@ -1,66 +1,69 @@
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AASHISH Times</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <!-- JavaScript Bundle with Popper -->
-    <script src="https://kit.fontawesome.com/d14aca8b31.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-</head>
+    <script
+      src="https://kit.fontawesome.com/d14aca8b31.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+  </head>
 
-<body>
+  <body>
     <div id="whole-body">
-        <div class="heading">
-            <header id="headingtext"><i>AASHIHSH TIMES</i></header>
-            <button id="Categories">Categories</button>
-        </div>
-        <div id="float">
-            <marquee> Top News</marquee>
-        </div>
-        <div class="hide" id="navbar">
-            <ul id="navlist">
-                <li id="sports">Sports</li>
-                <li id="science">Science</li>
-                <li id="business">Business</li>
-                <li id="politics">Politics</li>
-            </ul>
-        </div>
+      <div class="heading">
+        <header id="headingtext"><i>AASHIHSH TIMES</i></header>
+        <button id="Categories">Categories</button>
+      </div>
+      <div id="float">
+        <marquee> Top News</marquee>
+      </div>
+      <div class="hide" id="navbar">
+        <ul id="navlist">
+          <li id="sports">Sports</li>
+          <li id="science">Science</li>
+          <li id="business">Business</li>
+          <li id="politics">Politics</li>
+        </ul>
+      </div>
 
-        <main id="forgap">
+      <main id="forgap"></main>
 
-        </main>
-
-        <div id="footernav">
-            <button class="btn prevBtn">&#x2190;</button>
-            <button class="btn nextBtn">&#x2192;</button>
-            <div id="heart">
-                <p id="like">Give us a like !</p>
-            </div>
+      <div id="footernav">
+        <button class="btn prevBtn">&#x2190;</button>
+        <button class="btn nextBtn">&#x2192;</button>
+        <div id="heart">
+          <p id="like">Give us a like !</p>
         </div>
+      </div>
     </div>
     <div id="modal">
-
-        <div id="modal-header">
-            <div id="headingofmodal"></div>
-            <button id="close">&times;</button>
-
-        </div>
-        <p id="modalp"></p>
-        <p>For more information please <a id="newsurl" href="" target="_blank">click</a> the button</p>
-
-
-
-
-
-
-
+      <div id="modal-header">
+        <div id="headingofmodal"></div>
+        <button id="close">&times;</button>
+      </div>
+      <p id="modalp"></p>
+      <p>
+        For more information please
+        <a id="newsurl" href="" target="_blank">click</a> the button
+      </p>
     </div>
-
+    <div id="favourates">
+        
+    </div>
     <script src="index.js"></script>
-</body>
-
+  </body>
 </html>
