--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
         <a id="newsurl" href="" target="_blank">click</a> the button
       </p>
     </div>
-    <div id="favourates">
-        
+    <div id="favourates" class="hide">
+      <h1 style="text-align: center; font-weight: bold; " >  Favourates</h1>
+        <!-- <p id="favouratesheading"></p> -->
     </div>
     <script src="index.js"></script>
   </body>
