--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <button class="btn nextBtn">&#x2192;</button>
         <div id="heart">
           <p id="like">Give us a like !</p>
+          <i id="thankyou" class="fa-solid fa-heart"></i>
         </div>
       </div>
     </div>
@@ -61,8 +62,8 @@
         <a id="newsurl" href="" target="_blank">click</a> the button
       </p>
     </div>
-    <div id="favourates" class="hide">
-      <h1 style="text-align: center; font-weight: bold; " >  Favourates</h1>
+    <div id="favourates" class="hide"style="text-align: center; font-weight: bold; "> Favourates
+      
         <!-- <p id="favouratesheading"></p> -->
     </div>
     <script src="index.js"></script>
